--- a/others.html
+++ b/others.html
@@ -7,122 +7,126 @@
     <link rel="stylesheet" type="text/css" href="css/gp.css" />
     <title>Andere Projecten c#</title>
   </head>
-  <body style="background-color: hsl(54, 43%, 51%);">
-    <a href="index.html" style="color:rgb(255, 255, 255);">Back</a>
-    <p class="heading">API en AsyncProjecten (c# ADO.NET, Entity Framework, Async)</p>
-    <p>1. EscapeFromTheWoods :> AsyncProgrammeren waar apen uit de bos zo snel mogelijk weg lopen. 
-         <br/>2. GeoService API deze applicatie was gemaakt met EntityFramework met xUnitTest enz...<br /> 
-         3. KlantRestAPI is gemaakt met ADO.NET Sql database en Sql querries. <br/> 
-</p>
-    <div class="gallery-image">
-      <a href="./images/others/eftw1.png">
-      <div class="img-box">
-          <img src="./images/others/eftw1.png" alt=""
-        />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>Output Resultaat EFTW</p>
-            <p class="opacity-low">Output Resultaat EFTW</p>
-          </div>
-        </div>
-      </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/others/eftw2.png">
-        <img src="./images/others/eftw2.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>Output Resultaat EFTW</p>
-            <p class="opacity-low">Output Resultaat EFTW</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/others/eftw3.png">
-        <img src="./images/others/eftw3.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>Output Resultaat EFTW</p>
-            <p class="opacity-low">Output Resultaat EFTW</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/others/eftw4.png">
-        <img src="./images/others/eftw4.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>EFTW project</p>
-            <p class="opacity-low">EFTW project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/others/eftw5.png">
-        <img src="./images/others/eftw5.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>Output Resultaat EFTW</p>
-            <p class="opacity-low">Output Resultaat EFTW</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/others/geos.png">
-        <img src="./images/others/geos.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>GeoService project</p>
-            <p class="opacity-low">GeoService project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-
-    <div class="gallery-image">
-      <a href="./images/others/geos1.png">
-      <div class="img-box">
-          <img src="./images/others/geos1.png" alt=""
-        />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>GeoService project</p>
-            <p class="opacity-low">GeoService project</p>
-          </div>
-        </div>
-      </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/others/geos2.png">
-        <img src="./images/others/geos2.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>GeoService project</p>
-            <p class="opacity-low">GeoService project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/others/krp.png">
-        <img src="./images/others/krp.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>KlantRestAPÏ project</p>
-            <p class="opacity-low">KlantRestAPÏ project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-     
- 
-
-
-
+  <body>
+    <a href="index.html" class="back-link">← Back</a>
+    <h1 class="heading">API en AsyncProjecten</h1>
+    <div class="project-description">
+      <p>1. EscapeFromTheWoods :> AsyncProgrammeren waar apen uit de bos zo snel mogelijk weg lopen.</p>
+      <p>2. GeoService API deze applicatie was gemaakt met EntityFramework met xUnitTest enz...</p>
+      <p>3. KlantRestAPI is gemaakt met ADO.NET Sql database en Sql querries.</p>
     </div>
+
+    <div class="gallery-image">
+      <div class="img-box" style="--i:1">
+        <a href="./images/others/eftw1.png">
+          <img src="./images/others/eftw1.png" alt="EFTW Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>EscapeFromTheWoods</p>
+              <p class="opacity-low">Output Results</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:2">
+        <a href="./images/others/eftw2.png">
+          <img src="./images/others/eftw2.png" alt="EFTW Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>EscapeFromTheWoods</p>
+              <p class="opacity-low">Simulation View</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:3">
+        <a href="./images/others/eftw3.png">
+          <img src="./images/others/eftw3.png" alt="EFTW Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>EscapeFromTheWoods</p>
+              <p class="opacity-low">Process View</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:4">
+        <a href="./images/others/eftw4.png">
+          <img src="./images/others/eftw4.png" alt="EFTW Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>EscapeFromTheWoods</p>
+              <p class="opacity-low">Data Analysis</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:5">
+        <a href="./images/others/eftw5.png">
+          <img src="./images/others/eftw5.png" alt="EFTW Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>EscapeFromTheWoods</p>
+              <p class="opacity-low">Final Results</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:6">
+        <a href="./images/others/geos.png">
+          <img src="./images/others/geos.png" alt="GeoService Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>GeoService API</p>
+              <p class="opacity-low">Main Interface</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:7">
+        <a href="./images/others/geos1.png">
+          <img src="./images/others/geos1.png" alt="GeoService Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>GeoService API</p>
+              <p class="opacity-low">Data View</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:8">
+        <a href="./images/others/geos2.png">
+          <img src="./images/others/geos2.png" alt="GeoService Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>GeoService API</p>
+              <p class="opacity-low">API Endpoints</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:9">
+        <a href="./images/others/krp.png">
+          <img src="./images/others/krp.png" alt="KlantRestAPI Project" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>KlantRestAPI</p>
+              <p class="opacity-low">REST API Interface</p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <!-- Add lightbox script -->
+    <script src="js/lightbox.js"></script>
   </body>
 </html>
