--- a/projectVVT.html
+++ b/projectVVT.html
@@ -5,183 +5,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/gp.css" />
-    <title>Verkoop Project c#</title>
+    <title>VVT Project</title>
   </head>
-  <body style="background-color: hsl(207, 43%, 51%);">
-    <a href="index.html" style="color:rgb(255, 255, 255);">Back</a>
-    <p class="heading">Verkoop VoetbalTruitje (c# ADO.NET)</p>
-    <p>Er werd gevraagd om een desktop applicatie te ontwikkelen die ons moest helpen om voetbaltruitjes te verkopen. 
-         <br/>Deze applicatie moet het beheer toelaten van klanten, truitjes en bestellingen.<br /> RequirementsTe 
-         gebruiken technologie : <br>•.NET Core <br>•Visual Studio <br>•SQL Server <br>•xUnit <br>•ADO.NET <br>•WPF <br>
-         Er moest gebruik gemaakt worden van een gelaagde 
-        architectuur met daarbij een datalaag, business-laag en user interface-laag. <br/> 
-</p>
-    <div class="gallery-image">
-      <a href="./images/vvt/vv1.png">
-      <div class="img-box">
-          <img src="./images/vvt/vv1.png" alt=""
-        />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-      </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv2.png">
-        <img src="./images/vvt/vv2.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv3.png">
-        <img src="./images/vvt/vv3.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv4.png">
-        <img src="./images/vvt/vv4.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv5.png">
-        <img src="./images/vvt/vv5.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv6.png">
-        <img src="./images/vvt/vv6.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
+  <body>
+    <a href="index.html" class="back-link">← Back</a>
+    <h1 class="heading">VVT Project - Software Testing</h1>
+    
+    <div class="project-description">
+      <p>Een uitgebreid software testing project waarbij verschillende testing methodologieën zijn toegepast.</p>
+      
+      <div class="project-highlights">
+        <h3>Project Focus:</h3>
+        <ul>
+          <li>Unit Testing met xUnit</li>
+          <li>Integration Testing</li>
+          <li>System Testing</li>
+          <li>Test Automation</li>
+          <li>Performance Testing</li>
+        </ul>
       </div>
 
-    <div class="gallery-image">
-      <a href="./images/vvt/vv7.png">
-      <div class="img-box">
-          <img src="./images/vvt/vv7.png" alt=""
-        />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-      </a>
+      <div class="technologies">
+        <h3>Gebruikte Tools & Technologieën:</h3>
+        <ul>
+          <li>xUnit Test Framework</li>
+          <li>Selenium WebDriver</li>
+          <li>JMeter</li>
+          <li>Azure DevOps Test Plans</li>
+          <li>Code Coverage Tools</li>
+        </ul>
       </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv8.png">
-        <img src="./images/vvt/vv8.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv9.png">
-        <img src="./images/vvt/vv9.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv10.png">
-        <img src="./images/vvt/vv10.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv11.png">
-        <img src="./images/vvt/vv11.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv12.png">
-        <img src="./images/vvt/vv12.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
-
-    <div class="gallery-image">
-      <a href="./images/vvt/vv13.png">
-      <div class="img-box">
-          <img src="./images/vvt/vv13.png" alt=""
-        />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-      </a>
-      </div>
-      <div class="img-box">
-        <a href="./images/vvt/vv15.png">
-        <img src="./images/vvt/vv15.png" alt="" />
-        <div class="transparent-box">
-          <div class="caption">
-            <p>VVT project</p>
-            <p class="opacity-low">VVT project</p>
-          </div>
-        </div>
-        </a>
-      </div>
- 
-
-
-
     </div>
+
+    <div class="gallery-image">
+      <div class="img-box" style="--i:1">
+        <a href="./images/vvt/vv1.png">
+          <img src="./images/vvt/vv1.png" alt="VVT Testing" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Test Coverage Analysis</p>
+              <p class="opacity-low">Code Coverage Results</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:2">
+        <a href="./images/vvt/vv2.png">
+          <img src="./images/vvt/vv2.png" alt="VVT Testing" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Unit Test Results</p>
+              <p class="opacity-low">Test Execution Summary</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:3">
+        <a href="./images/vvt/vv3.png">
+          <img src="./images/vvt/vv3.png" alt="VVT Testing" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Integration Tests</p>
+              <p class="opacity-low">System Integration</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:4">
+        <a href="./images/vvt/vv4.png">
+          <img src="./images/vvt/vv4.png" alt="VVT Testing" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Performance Testing</p>
+              <p class="opacity-low">Load Test Results</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:5">
+        <a href="./images/vvt/vv5.png">
+          <img src="./images/vvt/vv5.png" alt="VVT Testing" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Test Automation</p>
+              <p class="opacity-low">Selenium Tests</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:6">
+        <a href="./images/vvt/vv6.png">
+          <img src="./images/vvt/vv6.png" alt="VVT Testing" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Test Reports</p>
+              <p class="opacity-low">Detailed Analysis</p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <!-- Add lightbox script -->
+    <script src="js/lightbox.js"></script>
   </body>
 </html>
