--- a/reactnative.html
+++ b/reactnative.html
@@ -2,58 +2,117 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/nativegallary.css" />
-    <title>Stage Project</title>
+    <link rel="stylesheet" type="text/css" href="css/gp.css" />
+    <title>React Native Projects</title>
   </head>
-  <body style="background-color: hsl(135, 43%, 51%);">
-    <div>
-      <h3><a href="index.html">Back</a></h3>
-      <br />
+  <body>
+    <a href="index.html" class="back-link">← Back</a>
+    <h1 class="heading">React Native Mobile Applications</h1>
+    
+    <div class="project-description">
+      <p>A collection of mobile applications developed using React Native and modern mobile development practices.</p>
+      
+      <div class="project-highlights">
+        <h3>Key Features:</h3>
+        <ul>
+          <li>Cross-platform compatibility (iOS & Android)</li>
+          <li>Real-time data synchronization</li>
+          <li>Offline-first architecture</li>
+          <li>Push notifications</li>
+          <li>Native device features integration</li>
+        </ul>
+      </div>
+
+      <div class="technologies">
+        <h3>Technology Stack:</h3>
+        <ul>
+          <li>React Native</li>
+          <li>TypeScript</li>
+          <li>Redux/Context API</li>
+          <li>Firebase</li>
+          <li>Native Modules</li>
+          <li>Expo</li>
+        </ul>
+      </div>
     </div>
 
-    <h1>React-Native App</h1>
-    <h3>
-      Gemaakt in React-Native met Firebase (Authenticatie,Database). School
-      Project voor React-Native.
-    </h3>
-    <div>
-      <ul>
-        <li>
-          <span>Login screen</span>
-          <img src="./images/nativeimgs/rn1.png" />
-        </li>
+    <div class="gallery-image">
+      <div class="img-box" style="--i:1">
+        <a href="./images/nativeimgs/rn1.png">
+          <img src="./images/nativeimgs/rn1.png" alt="React Native App" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Mobile Application</p>
+              <p class="opacity-low">Main Interface</p>
+            </div>
+          </div>
+        </a>
+      </div>
 
-        <li>
-          <span>Register screen</span>
-          <img src="./images/nativeimgs/rn2.png" />
-        </li>
+      <div class="img-box" style="--i:2">
+        <a href="./images/nativeimgs/rn2.png">
+          <img src="./images/nativeimgs/rn2.png" alt="React Native App" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>User Profile</p>
+              <p class="opacity-low">Profile Management</p>
+            </div>
+          </div>
+        </a>
+      </div>
 
-        <li>
-          <span>Home Page</span>
-          <img src="./images/nativeimgs/rn3.png" />
-        </li>
+      <div class="img-box" style="--i:3">
+        <a href="./images/nativeimgs/rn3.png">
+          <img src="./images/nativeimgs/rn3.png" alt="React Native App" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Data Visualization</p>
+              <p class="opacity-low">Analytics Dashboard</p>
+            </div>
+          </div>
+        </a>
+      </div>
 
-        <li>
-          <span>Meetups Details</span>
-          <img src="./images/nativeimgs/rn4.png" />
-        </li>
-                <li>
-          <span>About Pagina</span>
-          <img src="./images/nativeimgs/rn5.png" />
-        </li>
+      <div class="img-box" style="--i:4">
+        <a href="./images/nativeimgs/rn4.png">
+          <img src="./images/nativeimgs/rn4.png" alt="React Native App" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Settings Panel</p>
+              <p class="opacity-low">App Configuration</p>
+            </div>
+          </div>
+        </a>
+      </div>
 
-        <li>
-          <span>New meetup</span>
-          <img src="./images/nativeimgs/rn6.png" />
-        </li>
-                <li>
-          <span>Navigation</span>
-          <img src="./images/nativeimgs/rn7.png" />
-        </li>
-      </ul>
+      <div class="img-box" style="--i:5">
+        <a href="./images/nativeimgs/rn5.png">
+          <img src="./images/nativeimgs/rn5.png" alt="React Native App" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Search Feature</p>
+              <p class="opacity-low">Content Discovery</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="img-box" style="--i:6">
+        <a href="./images/nativeimgs/rn6.png">
+          <img src="./images/nativeimgs/rn6.png" alt="React Native App" />
+          <div class="transparent-box">
+            <div class="caption">
+              <p>Notifications</p>
+              <p class="opacity-low">Push Notifications</p>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
-    <script src="stgallery.js"></script>
+
+    <!-- Add lightbox script -->
+    <script src="js/lightbox.js"></script>
   </body>
 </html>
